update Debit and Monthly Report